k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-backend
spec:
  selector:
    app: book-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
