k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: book-frontend
spec:
  selector:
    app: book-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
