k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: book-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-frontend
                port:
                  number: 80
